Added day picker for age on sign up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,7 @@
     <string name="identification_screen_text_months" translatable="false"> months</string>
     <string name="identification_screen_picker_years" translatable="false">years</string>
     <string name="identification_screen_picker_months" translatable="false">months</string>
+    <string name="identification_screen_picker_days" translatable="false">days</string>
 
     //Active Patients Screen
     <string name="title_activity_active_patient" translatable="false">"Active Visits"</string>
