Removed logo & changed string

--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -740,7 +740,7 @@
     <string name="txt_whatsapp_helpline"><u>WhatsApp हेल्पलाइन</u></string>
     <string name="simple_exercises">घर पर करने के लिये सरल व्यायाम</string>
     <string name="txt_get_help_now"><u>अभी सहायता प्राप्त करें</u></string>
-    <string name="txt_talk_to_doc"><u>डॉक्टर से बात करें</u></string>
+    <string name="txt_talk_to_doc"><u>हमारे टेली-काउंसलर से बात करेंं</u></string>
     <string name="Mental_health_support_text">तनाव या चिंता महसूस करना? स्वास्थ्य सेवा प्रदाताओं के लिए कुछ स्व-देखभाल और समर्थन संसाधन यहां दिए गए हैं</string>
     <string name="tele_consultant_text">तनाव या चिंता महसूस करना? एक परामर्शदाता के साथ एक मुफ्त मानसिक मानसिक स्वास्थ्य परामर्श के लिए अनुरोध करें।</string>
     <string name="mental_health_support">मानसिक स्वास्थ्य समर्थन</string>
