--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -686,7 +686,7 @@
     <string name="ppe_req_hint">What PPE do you require with quantity*</string>
     <string name="txt_whatsapp_helpline"><u>WhatsApp Helpline</u></string>
     <string name="txt_get_help_now"><u>Get Help Now</u></string>
-    <string name="txt_talk_to_doc"><u>Talk to a doctor</u></string>
+    <string name="txt_talk_to_doc"><u>Talk to our Tele-Counsellor</u></string>
     <string name="Mental_health_support_text">Feeling stressed or anxious? Here are some self-care and support resources for healthcare providers</string>
     <string name="mental_health_support">Mental health support</string>
 
