--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -725,4 +725,8 @@
     <string name="invalid_otp">Invalid OTP</string>
     <string name="resend_otp">Resend OTP</string>
     <string name="reset_password_success">Password reset successfully</string>
+    <string name="hint_age">Age*</string>
+
+    <string name="hint_date_tested_positive">Date of tested positive*</string>
+    <string name="hint_postal_code" translatable="false">Postal code</string>
 </resources>
