--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -729,4 +729,5 @@
 
     <string name="hint_date_tested_positive">Date of tested positive*</string>
     <string name="hint_postal_code" translatable="false">Postal code</string>
+    <string name="hint_district" translatable="false">District*</string>
 </resources>
