--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -152,7 +152,6 @@
     <string name="txt_enter_caste">पद</string>
     <string name="toast_select_designation">कृपया अपना पदनाम चुनें।</string>
     <string name="error_empty_designation">अपना पदनाम दर्ज करें।</string>
-    <string name="txt_user_exists">Mobile number already...</string>
     <string name="address_details">पता दे</string>
     <string name="please_fill_your_details">कृपया अपना विवरण भरें</string>
     <string name="save">सहेजें</string>
@@ -757,6 +756,29 @@
     <string name="authentic_information">Covid19 पर व्यक्तिगत सुरक्षा और शैक्षिक संसाधनों के उपायों सहित Covid19 पर प्रामाणिक जानकारी</string>
     <string name="Here_you_can_monitor">यहां आप रोजाना अपने स्वास्थ्य की निगरानी कर सकते हैं और अगर आपको लगता है कि आप असुरक्षित संपर्क में हैं और संक्रमित हो सकते हैं तो मदद के लिए पहुंच सकते हैं। \n</string>
     <string name="monitor_your_own_health">"यहां आप रोजाना अपने स्वास्थ्य की निगरानी कर सकते हैं"</string>
+
+    <!--New strings for Signup and Login for OTP process...-->
+    <string name="warning_sign_up">Mobile number is not registered. Please sign up to continue.</string>
+    <string name="prompt_phone_number">मोबाइल नंबर</string>
+    <string name="prompt_otp" translatable="false">OTP</string>
+    <string name="action_send_otp" translatable="false">OTP भेजें</string>
+    <string name="action_reset_password" translatable="false">Reset Password</string>
+    <string name="prompt_confirm_password" translatable="false">Confirm Password*</string>
     <string name="enter_otp">Enter OTP</string>
-    <string name="send_otp">Send OTP</string>
+    <string name="send_otp">OTP भेजें</string>
+    <string name="otp_sent">OTP is sent to your mobile number</string>
+    <string name="invalid_otp">Invalid OTP</string>
+    <string name="resend_otp">Resend OTP</string>
+    <string name="reset_password_success">Password reset successfully</string>
+    <string name="hint_age">Age*</string>
+
+    <string name="hint_date_tested_positive">Date of tested positive*</string>
+    <string name="hint_postal_code" translatable="false">Postal code</string>
+    <string name="hint_district" translatable="false">District*</string>
+    <string name="splash_subtitle">NISHTHA’s Comprehensive Post COVID Care\nInitiative</string>
+    <string name="jharkhand">Jharkhand</string>
+    <string name="madhya_pradesh">Madhya Pradesh</string>
+    <string name="hint_block">Block*</string>
+    <string name="error_mandatory_field">Please fill all the mandatory fields</string>
+    <string name="txt_user_exists">Mobile Number already exists.</string>
 </resources>
