--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -182,7 +182,7 @@
     <string name="identification_screen_prompt_gender" translatable="false">Gender</string>
     <string name="identification_screen_prompt_age">Age:</string>
     <string name="identification_screen_prompt_city">Village/Town/City*</string>
-    <string name="identification_screen_prompt_state">State*</string>
+    <string name="identification_screen_prompt_state">राज्य*</string>
     <string name="identification_screen_prompt_caste" translatable="false">Caste</string>
     <string name="identification_screen_prompt_economic_status" translatable="false">Economic status</string>
     <string name="identification_screen_prompt_education" translatable="false">Education level</string>
@@ -758,27 +758,27 @@
     <string name="monitor_your_own_health">"यहां आप रोजाना अपने स्वास्थ्य की निगरानी कर सकते हैं"</string>
 
     <!--New strings for Signup and Login for OTP process...-->
-    <string name="warning_sign_up">Mobile number is not registered. Please sign up to continue.</string>
+    <string name="warning_sign_up">मोबाइल नंबर पंजीकृत नहीं है। कृपया साइन अप करें।</string>
     <string name="prompt_phone_number">मोबाइल नंबर</string>
     <string name="prompt_otp" translatable="false">OTP</string>
     <string name="action_send_otp" translatable="false">OTP भेजें</string>
-    <string name="action_reset_password" translatable="false">Reset Password</string>
-    <string name="prompt_confirm_password" translatable="false">Confirm Password*</string>
-    <string name="enter_otp">Enter OTP</string>
+    <string name="action_reset_password" translatable="false">पासवर्ड रीसेट</string>
+    <string name="prompt_confirm_password" translatable="false">पासवर्ड की पुष्टि कीजिये*</string>
+    <string name="enter_otp">OTP दर्ज करें</string>
     <string name="send_otp">OTP भेजें</string>
-    <string name="otp_sent">OTP is sent to your mobile number</string>
-    <string name="invalid_otp">Invalid OTP</string>
-    <string name="resend_otp">Resend OTP</string>
-    <string name="reset_password_success">Password reset successfully</string>
-    <string name="hint_age">Age*</string>
+    <string name="otp_sent">आपके मोबाइल नंबर पर OTP भेजा गया है</string>
+    <string name="invalid_otp">OTP ग़लत है</string>
+    <string name="resend_otp">OTP फिर से भेजे</string>
+    <string name="reset_password_success">पासवर्ड रीसेट सफलतापूर्वक</string>
+    <string name="hint_age">उम्र*</string>
 
-    <string name="hint_date_tested_positive">Date of tested positive*</string>
-    <string name="hint_postal_code" translatable="false">Postal code</string>
-    <string name="hint_district" translatable="false">District*</string>
+    <string name="hint_date_tested_positive">कोविद पॉज़िटिव रिपोर्ट की तारीख*</string>
+    <string name="hint_postal_code" translatable="false">डाक कोड</string>
+    <string name="hint_district" translatable="false">जिला*</string>
     <string name="splash_subtitle">NISHTHA’s Comprehensive Post COVID Care\nInitiative</string>
-    <string name="jharkhand">Jharkhand</string>
-    <string name="madhya_pradesh">Madhya Pradesh</string>
-    <string name="hint_block">Block*</string>
-    <string name="error_mandatory_field">Please fill all the mandatory fields</string>
-    <string name="txt_user_exists">Mobile Number already exists.</string>
+    <string name="jharkhand">झारखंड</string>
+    <string name="madhya_pradesh">मध्य प्रदेश</string>
+    <string name="hint_block">ब्लॉक*</string>
+    <string name="error_mandatory_field">कृपया सभी अनिवार्य फ़ील्ड भरें</string>
+    <string name="txt_user_exists">मोबाइल नंबर पहले से मौजूद है।</string>
 </resources>
