--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -727,7 +727,7 @@
     <string name="reset_password_success">Password reset successfully</string>
     <string name="hint_age">Age*</string>
 
-    <string name="hint_date_tested_positive">Date of tested positive*</string>
+    <string name="hint_date_tested_positive">Date of tested positive / Days*</string>
     <string name="hint_postal_code" translatable="false">Postal code</string>
     <string name="hint_district" translatable="false">District*</string>
     <string name="splash_subtitle">NISHTHA’s Comprehensive Post COVID Care\nInitiative</string>
@@ -735,4 +735,6 @@
     <string name="madhya_pradesh">Madhya Pradesh</string>
     <string name="hint_block">Block*</string>
     <string name="error_mandatory_field">Please fill all the mandatory fields</string>
+    <string name="enter_number_of_days">Enter number of days</string>
+    <string name="enter_date">Select a date</string>
 </resources>
