--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -577,7 +577,7 @@
     <string name="please_enter_your_username_and_password">Please choose Username and Password</string>
     <string name="android_id">Android Id:</string>
     <string name="respiratory_rate">Respiratory Rate</string>
-    <string name="click_to_download_the_images">Click to download the images</string>
+    <string name="click_to_download_the_images">छवियों को डाउनलोड करने के लिए क्लिक करें</string>
     <string name="doctor">Doctor</string>
     <string name="health_worker">Health worker</string>
     <string name="priority">Priority</string>
