Webrtc implemented. patient and nurse app to app v-call in progress

--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -741,4 +741,5 @@
     <string name="authentic_information">Covid19 पर व्यक्तिगत सुरक्षा और शैक्षिक संसाधनों के उपायों सहित Covid19 पर प्रामाणिक जानकारी</string>
     <string name="Here_you_can_monitor">यहां आप रोजाना अपने स्वास्थ्य की निगरानी कर सकते हैं और अगर आपको लगता है कि आप असुरक्षित संपर्क में हैं और संक्रमित हो सकते हैं तो मदद के लिए पहुंच सकते हैं। \n</string>
     <string name="monitor_your_own_health">"यहां आप रोजाना अपने स्वास्थ्य की निगरानी कर सकते हैं"</string>
+    <string name="connect_with_health_worker">Connect with Health Worker</string>
 </resources>
