--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -19,4 +19,5 @@
     <string name="please_select_state">Please select state</string>
     <string name="stay_aware_stay_safe">Stay Aware | Stay Safe</string>
     <string name="assessment_visit_title">Assessment</string>
+    <string name="connect_with_health_worker">Connect with Health Worker</string>
 </resources>
