--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="skip">skip</string>
     <string name="start">Start</string>
+    <string name="connect_with_health_worker">Connect with Health Worker</string>
 </resources>
