--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -697,4 +697,5 @@
     <string name="authentic_information">authentic information on Covid19 including measures of personal protection and educational resources on Covid19.</string>
     <string name="Here_you_can_monitor">Here you can monitor your own health daily and reach out for help if you think you may have had unsafe exposure and may be infected.\n</string>
     <string name="monitor_your_own_health">" monitor your own health daily"</string>
+    <string name="connect_with_health_worker">Connect with Health Worker</string>
 </resources>
