--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -134,7 +134,7 @@
     <string name="logout_menu">लॉग आउट</string>
 
     //Sign Up Screen
-    <string name="title_sign_up">साइन अप</string>
+    <string name="title_sign_up">रजिस्टर करें</string>
     <string name="personal_information">व्यक्तिगत जानकारी</string>
     <string name="login_details">लॉगइन विवरण</string>
     <string name="username">उपयोगकर्ता नाम*</string>
@@ -300,7 +300,7 @@
     <string name="visit_summary_follow_up_reminder" translatable="false">Please remind the patient of their follow up date: </string>
     <string name="visit_summary_upload_reminder" translatable="false">Please upload first before attempting to end the visit.</string>
     <string name="click_submit">सबमिट बटन पर क्लिक करें</string>
-    <string name="upload_before_home">सबमिट बटन पर क्लिक करके होम स्क्रीन पर जाने से पहले कृपया अपनी यात्रा अपलोड करें।</string>
+    <string name="upload_before_home">सबमिट बटन पर क्लिक करके होम स्क्रीन पर जाने से पहले कृपया अपनी जानकारी जमा करे।</string>
 
 
     //Diagnostic Tests Screen
@@ -479,7 +479,7 @@
     <string name="exit_survey_label" translatable="false">How was your experience?</string>
     <string name="exit_survey_prompt" translatable="false">Enter your comments here</string>
     <string name="exit_survey_skip" translatable="false">SKIP</string>
-    <string name="exit_survey_submit" translatable="false">प्रस्तुत</string>
+    <string name="exit_survey_submit" translatable="false">सबमिट</string>
     <string name="exit_survey_toast">Please select a smiley before submitting</string>
 
 
@@ -659,7 +659,7 @@
     <string name="help_cardview_visit">If you get much sicker please call your nearest doctor - 73054154312</string>
     <string name="intelesafe">InteleSafe</string>
     <string name="who_is_this_napplication_for">यह आवेदन किसके लिए है?</string>
-    <string name="submit_visitSummary_Button">प्रस्तुत</string>
+    <string name="submit_visitSummary_Button">सबमिट</string>
     <string name="medical_registration_number_license_id">Medical registration number/license ID</string>
     <string name="name_of_health_organization_hospital_where_you_primarily_work">Health org./hospital where you work</string>
     <string name="username_10digits">Username should be 8 characters</string>
@@ -781,7 +781,7 @@
     <string name="hint_block">ब्लॉक*</string>
     <string name="error_mandatory_field">कृपया सभी अनिवार्य फ़ील्ड भरें</string>
     <string name="txt_user_exists">मोबाइल नंबर पहले से मौजूद है।</string>
-    <string name="check_appointments">अपनी डॉक्टर अपॉइंटमेंट और प्रिस्क्रिप्षन जाँचें</string>
+    <string name="check_appointments">अपने अपॉइंटमेंट शेड्यूल और प्रिस्क्रिप्षन की जाँच करें</string>
     <string name="appointment_status">अपॉइंटमेंट स्थिति</string>
     <string name="choose_lang_title">अपनी भाषा चुनिए</string>
 </resources>
