Splash Screen changed done

--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -784,4 +784,5 @@
     <string name="check_appointments">अपनी डॉक्टर अपॉइंटमेंट और प्रिस्क्रिप्षन जाँचें</string>
     <string name="appointment_status">अपॉइंटमेंट स्थिति</string>
     <string name="choose_lang_title">अपनी भाषा चुनिए</string>
+    <string name="in_partnership_with_state_government_of">राज्य सरकार के सहयोग से</string>
 </resources>
