--- a/app/src/main/res/values-mr-rIN/strings.xml
+++ b/app/src/main/res/values-mr-rIN/strings.xml
@@ -719,5 +719,6 @@
     <string name="monitor_your_own_health">\" monitor your own health daily\"</string>
     <string name="enter_otp">Enter OTP</string>
     <string name="send_otp">Send OTP</string>
+    <string name="in_partnership_with_state_government_of">In partnership with state government of</string>
 
 </resources>
