--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -21,4 +21,5 @@
     <string name="assessment_visit_title">Assessment</string>
     <string name="enter_otp">Enter OTP</string>
     <string name="send_otp">Send OTP</string>
+    <string name="in_partnership_with_state_government_of">In partnership with state government of</string>
 </resources>
