--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="skip">skip</string>
     <string name="start">Start</string>
+    <string name="in_partnership_with_state_government_of">In partnership with state government of</string>
 </resources>
