--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -740,4 +740,5 @@
     <string name="check_appointments">Check your appointments and prescription</string>
     <string name="appointment_status">Appointment status</string>
     <string name="day_text">Day</string>
+    <string name="in_partnership_with_state_government_of">In partnership with state government of</string>
 </resources>
