--- a/app/src/main/res/values-sw600dp/strings.xml
+++ b/app/src/main/res/values-sw600dp/strings.xml
@@ -8,4 +8,5 @@
     <string name="monitor_your_own_health">\" monitor your own health daily\"</string>
     <string name="enter_otp">Enter OTP</string>
     <string name="send_otp">Send OTP</string>
+    <string name="in_partnership_with_state_government_of">In partnership with state government of</string>
 </resources>
