--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -740,4 +740,6 @@
     <string name="check_appointments">Check your appointment schedule and prescription</string>
     <string name="appointment_status">Appointment status</string>
     <string name="day_text">Day</string>
+    <string name="self_assessment">Self Assessment</string>
+    <string name="doctors_visits">Doctors Visits</string>
 </resources>
