--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -3,4 +3,9 @@
     <string name="skip">skip</string>
     <string name="start">Start</string>
     <string name="in_partnership_with_state_government_of">In partnership with state government of</string>
+    <string name="please_enter_value_for">\"Please enter the value for \"</string>
+    <string name="validation_text_for_temp">\"Please enter the valid value (85 to 108)  for \"</string>
+    <string name="spo2_number_validation_text">\"Please enter the valid value (max 100)  for \"</string>
+    <string name="respiratory_number_validation_text">\"Please enter the valid value (max 60)  for \"</string>
+    <string name="pulse_number_validation_text">\"Please enter the valid value (max 200)  for \"</string>
 </resources>
