--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -748,10 +748,10 @@
     <string name="info_about_covid"> Information about Covid &amp; \n FAQ</string>
     <string name="post_covid_title">Post COVID Care</string>
     <string name="videos_title">Know about Post COVID Care</string>
-    <string name="please_enter_value_for">\"Please enter the value for \"</string>
-    <string name="validation_text_for_temp">\"Please enter the valid value (85 to 108)  for \"</string>
-    <string name="spo2_number_validation_text">\"Please enter the valid value (max 100)  for \"</string>
-    <string name="respiratory_number_validation_text">\"Please enter the valid value (max 60)  for \"</string>
-    <string name="pulse_number_validation_text">\"Please enter the valid value (max 200)  for \"</string>
+    <string name="please_enter_value_for">Please enter the value for </string>
+    <string name="validation_text_for_temp">Please enter the valid value (85 to 108)  for </string>
+    <string name="spo2_number_validation_text">Please enter the valid value (max 100)  for </string>
+    <string name="respiratory_number_validation_text">Please enter the valid value (max 60)  for </string>
+    <string name="pulse_number_validation_text">Please enter the valid value (max 200)  for </string>
 
 </resources>
