--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -29,4 +29,6 @@
     <string name="pulse_number_validation_text">Please enter the valid value (max 200)  for </string>
     <string name="please_give_your_answer">Please select your answer</string>
     <string name="please_select_any_option">Please select any option</string>
+    <string name="hint_date_tested_positive_optional">Date of tested positive / Days</string>
+    <string name="hint_block_optional">Block</string>
 </resources>
