--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -798,5 +798,6 @@
     <string name="pulse_number_validation_text">कृपया इसके लिए मान्य मान (अधिकतम 200) दर्ज करें </string>
     <string name="please_give_your_answer">कृपया अपना उत्तर चुनें</string>
     <string name="please_select_any_option">कृपया कोई विकल्प चुनें</string>
+    <string name="download_prescription"><u>प्रिस्क्रिप्शन डाउनलोड करें</u></string>
 
 </resources>
