--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -756,5 +756,6 @@
     <string name="title_videos">Covid 19 videos</string>
     <string name="please_give_your_answer">Please select your answer</string>
     <string name="please_select_any_option">Please select any option</string>
+    <string name="download_prescription"><u>Download Prescription</u></string>
 
 </resources>
