--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -786,7 +786,7 @@
     <string name="choose_lang_title">अपनी भाषा चुनिए</string>
     <string name="in_partnership_with_state_government_of">राज्य सरकार के सहयोग से</string>
 
-    <string name="recovering_covid_new">पोस्ट-कोविड देखभाल के बारे में \n वीडियो</string>
+    <string name="recovering_covid_new">पोस्ट-कोविड देखभाल के बारे में वीडियो</string>
     <string name="educational_videos">शैक्षिक वीडियो</string>
     <string name="info_about_covid">कोविड और अक्सर पूछे जाने वाले प्रश्नों के बारे में जानकारी</string>
     <string name="post_covid_title">पोस्ट कोविड केयर</string>
