--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -743,9 +743,9 @@
     <string name="doctors_visits">Doctors Visits</string>
     <string name="in_partnership_with_state_government_of">In partnership with state government of</string>
 
-    <string name="recovering_covid_new">Recovering from Covid-19 \n Videos</string>
+    <string name="recovering_covid_new">Recovering from Covid-19 Videos</string>
     <string name="educational_videos">Educational Videos</string>
-    <string name="info_about_covid">Information about Covid &amp;\nFAQ</string>
+    <string name="info_about_covid">Information about Covid &amp; FAQ</string>
     <string name="post_covid_title">Post COVID Care</string>
     <string name="videos_title">Post COVID care</string>
     <string name="please_enter_value_for">Please enter the value for </string>
