--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -815,5 +815,6 @@
     <string name="note_for_doctors_visits">COVID रिकवरी के बाद टेलीकंसल्टेशन</string>
     <string name="click_here_view_details">विवरण देखने के लिए यहां क्लिक करें</string>
     <string name="go_to_home">होम स्क्रीन पर जाएं</string>
+    <string name="sikkim">Sikkim</string>
 
 </resources>
