--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -43,4 +43,5 @@
     <string name="note_for_doctors_visits">Teleconsultation for post-COVID recovery</string>
     <string name="click_here_view_details">Click here to view details</string>
     <string name="go_to_home">Go to Home</string>
+    <string name="sikkim">Sikkim</string>
 </resources>
