--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -773,5 +773,6 @@
     <string name="note_for_doctors_visits">Teleconsultation for post-COVID recovery</string>
     <string name="click_here_view_details">Click here to view details</string>
     <string name="go_to_home">Go to Home</string>
+    <string name="health_facilities">Health Facilities</string>
 
 </resources>
