--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -774,5 +774,8 @@
     <string name="click_here_view_details">Click here to view details</string>
     <string name="go_to_home">Go to Home</string>
     <string name="sikkim">Sikkim</string>
-
+    <string name="profile">Profile</string>
+    <string name="hint_name">Name</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="choose_from_gallery">Choose from Gallery</string>
 </resources>
